First work on raster classes and simple basemaps, as well as tests for both. Updates to .gitignore to reflect repository and directory content.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ pip-log.txt
 .tox
 nosetests.xml
 
+# test data (large files)
+tests/data/*
+
 # Translations
 *.mo
 
@@ -36,3 +39,7 @@ nosetests.xml
 
 # TextMate
 *.tmproj
+
+# iPython
+.ipynb_checkpoints
+*.ipynb
